@@ -4,7 +4,7 @@
  ;; Your init file should contain only one such instance.
  ;; If there is more than one, they won't work right.
  '(package-selected-packages
-   '(rainbow-mode php-mode rust-mode exec-path-from-shell osx-trash org-preview-html markdown-mode)))
+   '(rainbow-mode php-mode rust-mode exec-path-from-shell org-preview-html markdown-mode)))
 (custom-set-faces
  ;; custom-set-faces was added by Custom.
  ;; If you edit it by hand, you could mess it up, so be careful.
